version/dev/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/SFECommand.rst.txt
.. vale off



:class:`SFECommand`
===================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.SFECommand

   Bases: :py:obj:`object`


   
   Represents a SFE command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SFECommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Elem`
            - Gets the element number.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Key`
            - Gets the value key.
          * - :py:attr:`~LKey`
            - Get the load key.
          * - :py:attr:`~Lab`
            - Gets the load label.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Elem
   :type: Optional[System.UInt32]

   
   Gets the element number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[System.UInt32]

   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Key
   :type: Optional[System.UInt32]

   
   Gets the value key.
















   ..
       !! processed by numpydoc !!

.. py:property:: LKey
   :type: Optional[System.UInt32]

   
   Get the load key.
















   ..
       !! processed by numpydoc !!

.. py:property:: Lab
   :type: Optional[System.String]

   
   Gets the load label.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[System.String]

   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[System.Collections.Generic.IReadOnlyList[System.Double]]

   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on